grammar.js
    template: ($) => repeat1(choice($.template_node, $.content)),
    // the tags of a group; see startTag
    content: ($) => prec.right(repeat1(choice($._text, $._text_brace))),
    /**
     * Template text up to a "{{", "{%" or "{#". A "{" that is text only because
     * of what comes after the next character, as in "a{{% if x %}" or a "{" at
     * the end of input, is _text_brace from the scanner; see
     * scan_text_brace_rest.
     */
    _text: ($) => /(?:[^\{]|\{[^\{#%])+/,
    // the separator between the parts of a tag; see SEP
    filtered_value: ($) =>
      seq($.value, optional(seq("|", $.filter_expression))),
    filter_expression: ($) => seq($.filter, repeat(seq("|", $.filter))),
    value: ($) => choice($.literal, $.variable_attribute),
    literal: ($) =>
      choice($.number, $.string, $.translated_string, $.boolean, $.none),
    /**
     * Digits, with single underscores allowed between them, as Python's int()
     * and float() accept ("1_000") and Django's Variable relies on.
     *
     * A trailing dot needs an exponent after it. Variable calls float() and
     * then rejects what it just parsed if the last character is a dot — the
     * comment in Django reads `# "2." is invalid` — so "1." is a two-part
     * lookup there rather than a number, while "1.e5" is a float.
     */
    number: ($) =>
      /[-+]?(?:(?:[0-9](?:_?[0-9])*(?:\.[0-9](?:_?[0-9])*)?|\.[0-9](?:_?[0-9])*)(?:[eE][0-9](?:_?[0-9])*)?|[0-9](?:_?[0-9])*\.[eE][0-9](?:_?[0-9])*)/,
    string: ($) => STRING,
    /**
     * A string to translate at render time. Django matches "_(" and ")" as
     * part of the constant itself, so nothing may come between them and the
     * string: "_( 'a' )" is a syntax error there, not a translated literal.
     */
    attribute: ($) => /[a-zA-Z0-9][a-zA-Z0-9_]*(?:\.[a-zA-Z0-9][a-zA-Z0-9_]*)*/,
    variable_attribute: ($) =>
      seq($.identifier, optional(seq(".", $.attribute))),
    identifier: ($) => /[a-zA-Z][a-zA-Z0-9_]*/,
    predicate: ($) =>
      seq(
        repeat(seq("not", SEP)),
        $.filtered_value,
        repeat(
          seq(
            part($.binaryOperator),
            repeat(part("not")),
            part($.filtered_value),
          ),
        ),
      ),
    template_variable: ($) =>
      seq(
        "{{",
        optional(SEP),
        alias($._filtered_value_spaced, $.filtered_value),
        optional(SEP),
        "}}",
      ),
    /**
     * Everything between "{{" and "}}" reaches Django as a single expression,
     * so whitespace may surround a pipe there. Inside a tag it may not: the
     * contents are split on whitespace before each argument is parsed, which
     * would leave a bare "|" as an argument of its own.
     */
    _filtered_value_spaced: ($) =>
      seq(
        $.value,
        optional(
          seq(
            optional(SEP),
            "|",
            optional(SEP),
            alias($._filter_expression_spaced, $.filter_expression),
          ),
        ),
      ),
    filter: ($) =>
      choice(
        field(
          "filter_name",
          choice(
            ...FILTERS_WITHOUT_ARGUMENT,
            ...I18N_FILTERS_WITHOUT_ARGUMENT,
            ...L10N_FILTERS_WITHOUT_ARGUMENT,
            ...TZ_FILTERS_WITHOUT_ARGUMENT,
          ),
        ),
        seq(
          field(
            "filter_name",
            choice(...FILTERS_WITH_ARGUMENT, ...TZ_FILTERS_WITH_ARGUMENT),
          ),
          ":",
          field("argument", $.value),
        ),
        seq(
          field("filter_name", choice(...FILTERS_WITH_OPTIONAL_ARGUMENT)),
          optional(seq(":", field("argument", $.value))),
        ),
        $._custom_filter,
      ),
    /**
     * A filter a "load" brought in: its name is not known here, and so neither
     * is whether it takes an argument. Hidden, so the tree is the same as if
     * it were spelled inline, but named so that a grammar extending this one
     * can drop it from filter's alternatives the way it can drop custom_tag
     * from template_tag.
     */
    _custom_filter: ($) =>
      seq(
        field("filter_name", $.identifier),
        optional(seq(":", field("argument", $.value))),
      ),
    block_group: ($) =>
      seq(
        $.block_block,
        choice($.endblock_tag, alias($._missing_tag, $.missing_endblock_tag)),
      ),
    custom_tag: ($) => simpleTag(reserved("group_tag_names", $.identifier)),
    filter_block: ($) => seq($.filter_tag, optional($.template)),
    filter_group: ($) =>
      seq(
        $.filter_block,
        choice($.endfilter_tag, alias($._missing_tag, $.missing_endfilter_tag)),
      ),
    for_group: ($) =>
      seq(
        $.for_block,
        optional($.empty_block),
        choice($.endfor_tag, alias($._missing_tag, $.missing_endfor_tag)),
      ),
    /**
     * django.templatetags.i18n. Each of these requires exactly "as <name>",
     * or "for <expression> as <name>", and rejects anything further.
     */
    if_group: ($) =>
      seq(
        $.if_block,
        repeat($.elif_block),
        optional($.else_block),
        choice($.endif_tag, alias($._missing_tag, $.missing_endif_tag)),
      ),
    with_group: ($) =>
      seq(
        $.with_block,
        choice($.endwith_tag, alias($._missing_tag, $.missing_endwith_tag)),
      ),
  },
});

export default django;
