test/corpus/cycle.txt
==================
Cycle Basic
==================

<table>
  <tr class="{% cycle 'row1' 'row2' %}">
  </tr>
</table>

---

(template
  (content)
  (cycle_block
    (filtered_value
      (value
        (literal
          (string))))
    (filtered_value
      (value
        (literal
          (string)))))
  (content))

==================
Cycle With As
==================

<table>
  <tr class="{% cycle 'row1' 'row2' as rowcolors %}">
  </tr>
</table>

---

(template
  (content)
  (cycle_block
    (filtered_value
      (value
        (literal
          (string))))
    (filtered_value
      (value
        (literal
          (string))))
    variable: (identifier))
  (content))

==================
Cycle With As And Silent
==================

<table>
  <tr class="{% cycle 'row1' 'row2' as rowcolors silent %}">
  </tr>
</table>

---

(template
  (content)
  (cycle_block
    (filtered_value
      (value
        (literal
          (string))))
    (filtered_value
      (value
        (literal
          (string))))
    variable: (identifier))
  (content))

==================
Cycle Referencing Existing Variable
==================

<table>
  <tr class="{% cycle rowcolors %}">
  </tr>
</table>

---

(template
  (content)
  (cycle_block
    (filtered_value
      (value
        (variable_attribute
          (identifier)))))
  (content))

==================
Cycle With As Adjacent To Value
:error
==================

{% cycle 1 2as rowcolors %}

---

(ERROR)

==================
Cycle Value Adjacent To Value
:error
==================

{% cycle 'row1'rowcolors %}

---

(ERROR)

==================
Cycle Number Run On To Number
:error
==================

{% cycle 1.2.3 %}

---

(ERROR)

==================
Cycle Spanning Lines
==================

{% cycle 1
  2 as x %}

---

(template
  (content)
  (cycle_block
    (filtered_value
      (value
        (literal
          (number))))
    (filtered_value
      (value
        (literal
          (number))))
    variable: (identifier))
  (content))
