test/corpus/extends.txt
==================
Extends With String
==================

{% extends "base.html" %}
<h1>Hello</h1>

---

(template
  (content)
  (extends_block
    (filtered_value
      (value
        (literal
          (string)))))
  (content))

==================
Extends With Variable
==================

{% extends base_template %}
<h1>Hello</h1>

---

(template
  (content)
  (extends_block
    (filtered_value
      (value
        (variable_attribute
          (identifier)))))
  (content))
