test/corpus/filter.txt
==================
Filter Basic
==================

<p>
{% filter upper %}
hello
{% endfilter %}
</p>

---

(template
  (content)
  (filter_group
    (filter_clause
      (filter_block
        (filter_expression
          (filter)))
      (template
        (content)))
    (endfilter_block))
  (content))

==================
Filter With Chain
==================

<p>
{% filter lower|title %}
HELLO WORLD
{% endfilter %}
</p>

---

(template
  (content)
  (filter_group
    (filter_clause
      (filter_block
        (filter_expression
          (filter)
          (filter)))
      (template
        (content)))
    (endfilter_block))
  (content))

==================
Filter With Spaced Chain
==================

<p>
{% filter lower
   | title %}
HELLO WORLD
{% endfilter %}
</p>

---

(template
  (content)
  (filter_group
    (filter_clause
      (filter_block
        (filter_expression
          (filter)
          (filter)))
      (template
        (content)))
    (endfilter_block))
  (content))
